--- a/views/index.html
+++ b/views/index.html
@@ -6,17 +6,18 @@ Hotels:
   {% for hotel in all_hotels %}
   <option>{{hotel.name}}</option>
   {% endfor %}
-</select>
+</select><button class="btn btn-danger" type="submit">x</button><br>
 Restaurants:
 <select>
   {% for restaurant in all_restaurants %}
   <option>{{restaurant.name}}</option>
   {% endfor %}
-</select>
+</select><button class="btn btn-danger" type="submit">x</button><br>
 Activities:
 <select>
   {% for activity in all_activities %}
   <option>{{activity.name}}</option>
   {% endfor %}
 </select>
+<button class="btn btn-danger" type="submit">x</button>
 {% endblock %}
