working google map API

--- a/views/layout.html
+++ b/views/layout.html
@@ -23,8 +23,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-8">
-    <div class="map">
-      [[map]]
+    <div id="map-canvas">
     </div>
     </div> <!-- close column -->
     <div class="col-md-4">
@@ -55,7 +54,9 @@
     </div>
   </div> <!-- close row -->
 </div> <!-- close container -->
-<script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="/jquery/jquery.min.js" type="text/javascript"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqBKObcYhkjvifxwCRs--jbwQMFmddukg&sensor=true"></script>
+<script src="/map.js" type="text/javascript"></script>
+<script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 </body>
 </html>
