--- a/views/layout.html
+++ b/views/layout.html
@@ -5,55 +5,67 @@
   <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="/stylesheets/style.css" rel="stylesheet">
 </head>
+
 <body>
+
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
-  <div class="navbar-header">
-  <div class="navbar-brand">
-  <span class="glyphicon glyphicon-plane"></span>
-  Trip Planner</div>
-  </div>
+    <div class="navbar-header">
+      <div class="navbar-brand">
+        <span class="glyphicon glyphicon-plane"></span>
+          Trip Planner
+      </div> <!-- close navbar-brand -->
+    </div>  <!-- close navbar-header -->
+  
   <ul class="nav navbar-nav navbar-left">
     <li class="active"><a href="#">Home</a></li>
     <li><a href="#">About</a></li>
     <li><a href="#">Contact</a></li>
   </ul>
-  </div>
-</nav>
+
+  </div> <!-- close container -->
+</nav> <!-- close nav -->
+
 <div class="container-fluid">
   <div class="row">
+
     <div class="col-md-8">
-    <div id="map-canvas">
-    </div>
-    </div> <!-- close column -->
+      <div id="map-canvas"></div>
+    </div> <!-- close col-md-8 -->
+  
     <div class="col-md-4">
       <div class="options">
           {% block content %}{% endblock %}
-      </div>
-      Day 2<br>
+      </div> <!-- close options -->
+
       <div class="itin">
           <div class="day-btns">
-          <button class="btn btn-default" type="submit">1</button>
-          <button class="btn btn-default" type="submit">2</button>
-          <button class="btn btn-default" type="submit">3</button>
-          <button class="btn btn-default" type="submit">+</button>
+            <button class="btn btn-default" type="submit">1</button>
+            <button class="btn btn-default" type="submit">2</button>
+            <button class="btn btn-default" type="submit">3</button>
+            <button class="btn btn-default" type="submit">+</button>
           </div>
+
       My Hotel<br>
       <ul><li>
         [[xxxxxxxxxxxxxxxxx]] <button class="btn btn-danger" type="submit">x</button>
       </li></ul>
+
       My Restaurants<br>
       <ul><li>
         [[xxxxxxxxxxxxxxxxx]] <button class="btn btn-danger" type="submit">x</button>
       </li></ul>
+
       My Activities<br>
       <ul><li>
         [[xxxxxxxxxxxxxxxxx]] <button class="btn btn-danger" type="submit">x</button>
       </li></ul>
-      </div>
-    </div>
+
+      </div> <!-- close itin -->
+    </div> <!-- close col-md-4 -->
   </div> <!-- close row -->
 </div> <!-- close container -->
+
 <script src="/jquery/jquery.min.js" type="text/javascript"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqBKObcYhkjvifxwCRs--jbwQMFmddukg&sensor=true"></script>
 <script src="/map.js" type="text/javascript"></script>
