--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -1,5 +1,6 @@
+@import "media";
+
 body {
-  background-color: grey;
   padding-top: 70px;
 }
 
@@ -8,7 +9,7 @@ span.glyphicon {
 }
 
 #map-canvas {
-  height: 75vh;
+  height: 100vh;
 }
 
 ul {
@@ -20,18 +21,30 @@ ul {
 
 .options {
   display: inline-block;
-  background-color: brown;
   width: 100%;
   height: 300px;
 }
 
 .itin {
   display: inline-block;
-  background-color: green;
   width: 100%;
   height: 300px;
 }
 
-.day-btns {
-  background-color: orange;
+.form-control {
+  display: inline;
+  width: 90%;
 }
+
+select {
+  margin-right: 5px;
+}
+
+#day-header {
+  text-align: center;
+}
+
+.btn {
+  border-radius: 50%;
+}
+
