--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,11 @@
 body {
-  background-color: grey;
   padding-top: 70px; }
 
 span.glyphicon {
   font-size: 1.5em; }
 
 #map-canvas {
-  height: 75vh; }
+  height: 100vh; }
 
 ul {
   list-style-type: none; }
@@ -15,15 +14,23 @@ ul {
 
 .options {
   display: inline-block;
-  background-color: brown;
   width: 100%;
   height: 300px; }
 
 .itin {
   display: inline-block;
-  background-color: green;
   width: 100%;
   height: 300px; }
 
-.day-btns {
-  background-color: orange; }
+.form-control {
+  display: inline;
+  width: 90%; }
+
+select {
+  margin-right: 5px; }
+
+#day-header {
+  text-align: center; }
+
+.btn {
+  border-radius: 50%; }
