--- a/views/index.html
+++ b/views/index.html
@@ -1,23 +1,23 @@
 {% extends "layout.html" %}
 
 {% block content %}
-Hotels:
-<select>
+<div class="panel-body">
+<h4>Hotels</h4>
+<select id="hotel-select" class="form-control">
   {% for hotel in all_hotels %}
   <option>{{hotel.name}}</option>
   {% endfor %}
-</select><button class="btn btn-danger" type="submit">x</button><br>
-Restaurants:
-<select>
+</select><button id="hotel-submit" class="btn btn-success" type="submit">+</button><br>
+<h4>Restaurants</h4>
+<select id="rest-select" class="form-control">
   {% for restaurant in all_restaurants %}
   <option>{{restaurant.name}}</option>
   {% endfor %}
-</select><button class="btn btn-danger" type="submit">x</button><br>
-Activities:
-<select>
+</select><button  id="rest-submit" class="btn btn-success" type="submit">+</button><br>
+<h4>Activities</h4><select id="activity-select" class="form-control">
   {% for activity in all_activities %}
   <option>{{activity.name}}</option>
   {% endfor %}
-</select>
-<button class="btn btn-danger" type="submit">x</button>
+</select><button id="activity-submit" class="btn btn-success" type="submit">+</button>
+</div>
 {% endblock %}
