--- a/views/layout.html
+++ b/views/layout.html
@@ -44,7 +44,7 @@
       </div> <!-- close options -->
 
       <div id="day-header">
-       <h2><span class="label label-info">Day 1<button class="btn btn-danger rm-btn" type="submit">x</button></span></h2>
+       <h2><span class="label label-info">Day 1</span><button class="btn btn-danger rm-btn" type="submit">x</button></h2>
       </div>
 
       <div class="itin panel panel-default">
